--- a/apps/java-maven/src/main/resources/templates/index.html
+++ b/apps/java-maven/src/main/resources/templates/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
     <div class="content-centered" style="margin: 0 auto; flex-direction: column; width: 67%; height: 100%;">
-        <!-- <div class="content-centered">
+        <div class="content-centered">
             <a href="https://buildpacks.io"><img src="/buildpacks-logo.svg" alt="Buildpacks.io Logo" style="width:50vw;"></a>
-        </div> -->
+        </div>
         <h1>Hello, Buildpacker!</h1>
     </div>
 </body>
